ended the translation of the old blog

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: God save the uncertainty!
+title: un pitone a san luca
 email: enrico.giampieri@unibo.it
 description: "my blog for ranting about decision theory, statistics, programming in python and other random stuff"
 baseurl: ""
@@ -8,3 +8,5 @@ url: "http://EnricoGiampieri.github.com"
 # Build settings
 markdown: kramdown
 permalink: pretty
+
+baseurl: "http://enricogiampieri.github.io/"
