--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,14 @@ markdown: kramdown
 permalink: pretty
 
 baseurl: "http://enricogiampieri.github.io/"
+
+# Settings for analytics helper
+# Set 'provider' to the analytics provider you want to use.
+# Set 'provider' to false to turn analytics off globally.
+#
+analytics :
+provider : google
+google :
+tracking_id : 'UA-52517157-1'
+getclicky :
+site_id :
